(library
 (name tiramisu)
 (libraries core)
 (modules (:standard \ main))
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

(executable
 (name main)
 (modules main)
 (public_name tiramisu)
 (libraries core_unix.command_unix core_unix.filename_unix tiramisu)
 (preprocess
  (pps ppx_jane)))
